--- a/css/style.css
+++ b/css/style.css
@@ -7,25 +7,25 @@
 #ffffff */
 
 body {
-    background-color: #b9ffff;
+    background-image: url(../assets/img/fondo.jpg);
+    background-size: cover;
 }
 
 header {
-    background-color: #0098ff;
+    background-color: white;
     display: flex;
-    position: absolute;
     width: 100%;
     height: 85px;
-    left: 0%;
-    top: 0%;
     flex-flow: row wrap;
     justify-content: space-between;
+    position: fixed;
+    z-index: 1000;
 }
 
 header .logo a img {
     position: absolute;
-    width: 35px;
-    height: 35px;
+    width: 45px;
+    height: 45px;
     left: 5%;
     top: 25%;
 }
@@ -50,7 +50,7 @@ header nav .navegador li a {
     font-size: 139%;
     line-height: 100%;
     text-align: center;
-    color: #b9ffff;
+    color: black;
     font-family: 'Quicksand', sans-serif;
     text-decoration: none;
 }
@@ -67,7 +67,7 @@ main .secUno {
     box-sizing: border-box;
     border: 2px solid black;
     border-radius: none;
-    background-image: url(../assets/img/piedras-azules.jpeg);
+    background-image: url(../assets/img/fondotit.jpg);
     position: absolute;
     width: 97%;
     height: 280px;
@@ -82,25 +82,25 @@ main .secUno .secImguno img {
     position: absolute;
     width: 200px;
     height: 200px;
-    left: 21%;
-    top: 22%;
+    left: 28%;
+    top: 15%;
     opacity: none;
     display: flex;
 }
 
 main .secUno .secTit h1 {
     font-style: normal;
-    font-weight: 400;
-    font-size: 300%;
+    font-weight: 700;
+    font-size: 400%;
     line-height: 100%;
     text-align: center;
-    color: white;
+    color: black;
     font-family: 'Quicksand', sans-serif;
     position: absolute;
     width: 25%;
     height: 10%;
-    left: 37.5%;
-    top: 20%;
+    left: 47%;
+    top: 25%;
 }
 
 main #secDos {
@@ -122,7 +122,7 @@ main #secDos .clasUno h2 {
     font-size: 300%;
     line-height: 100%;
     text-align: center;
-    color: #00c0ff;
+    color: black;
     font-family: 'Quicksand', sans-serif;
     letter-spacing: 0.2em;
     -webkit-animation: tracking-in-contract 4s cubic-bezier(0.215, 0.61, 0.355, 1) infinite both;
@@ -151,7 +151,7 @@ main #secDos .clasUno h2 {
 main .secTres {
     position: absolute;
     width: 100%;
-    height: 400px;
+    height: 500px;
     left: 0px;
     top: 450px;
 }
@@ -162,7 +162,7 @@ main .secTres #carouselExample .carousel-inner .carousel-item .container-card {
 
 main .secTres #carouselExample .carousel-inner .carousel-item .card {
     margin: 0.5em;
-    height: 330px;
+    height: 400px;
     width: 350px;
     background-color: white;
     text-align: center;
@@ -186,7 +186,7 @@ main #secCuatro {
     width: 100%;
     height: 150px;
     left: 0px;
-    top: 850px;
+    top: 930px;
 }
 
 main #secCuatro .clasUno {
@@ -201,7 +201,7 @@ main #secCuatro .clasUno h2 {
     font-size: 300%;
     line-height: 100%;
     text-align: center;
-    color: #00c0ff;
+    color: black;
     font-family: 'Quicksand', sans-serif;
     letter-spacing: 0.2em;
     -webkit-animation: tracking-in-contract 4s cubic-bezier(0.215, 0.61, 0.355, 1) infinite both;
@@ -230,8 +230,17 @@ main #secCuatro .clasUno h2 {
 main #secCuatro .clasDos {
     position: absolute;
     top: 100px;
+    left: 0;
     width: 100%;
     height: 200px;
+}
+
+main #secCuatro .clasDos p {
+    position: absolute;
+    margin: 0;
+    text-align: center;
+    width: 80%;
+    left: 10%;
 }
 
 main #secCinco {
@@ -254,7 +263,7 @@ main #secCinco .clasUno h2 {
     font-size: 300%;
     line-height: 100%;
     text-align: center;
-    color: #00c0ff;
+    color: black;
     font-family: 'Quicksand', sans-serif;
     letter-spacing: 0.2em;
     -webkit-animation: tracking-in-contract 4s cubic-bezier(0.215, 0.61, 0.355, 1) infinite both;
@@ -295,7 +304,7 @@ main #secCinco .clasDos form .formNos {
     height: 66.5%;
     left: 1%;
     top: 18%;
-    background: #0098ff;
+    background: black;
     opacity: 0.8;
     border-radius: 30px;
 }
@@ -364,7 +373,7 @@ main #secCinco .clasDos form .envNos {
     height: 5%;
     left: 47.5%;
     top: 88.5%;
-    background: #0098ff;
+    background: white;
     font-style: normal;
     font-weight: 600;
     font-size: 100%;
@@ -413,43 +422,39 @@ footer div .redesSociales li a img {
         top: 15%;
     }
     main .secUno .secTit h1 {
-        left: 42%;
+        left: 49%;
         top: 30%;
+        font-size: 300%;
+        width: 30%;
+    }
+    main #secCinco {
+    top: 1250px;
+    }
+    footer {
+        top: 1970px;
     }
 }
 
 @media (max-width: 768px) {
-    body {
-        background-color: #63ebff;
-    }
-    header {
-        background-color: #00c0ff;
-    }
     header nav .navegador li a {
         font-size: 110%;
-        color: black;
+    }
+    main .secUno .secImguno img {
+        left: 20%;
     }
     main .secUno .secTit h1 {
-        left: 52%;
-    }
-    main #secDos .clasUno h2 {
-        color: black;
+        left: 46%;
+        width: 37%;
     }
     main .secTres #carouselExample .carousel-inner .carousel-item .container-card {
         display: grid;
         grid-template-columns: repeat(2, 2fr);
     }
     main #secCuatro {
-        top: 1200px;
-    }
-    main #secCuatro .clasUno h2 {
-        color: black;
+        top: 1300px;
     }
     main #secCinco {
-        top: 1580px;
-    }
-    main #secCinco .clasUno h2 {
-        color: black;
+        top: 1680px;
     }
     main #secCinco .clasDos form .envNos {
         width: 15%;
@@ -457,33 +462,26 @@ footer div .redesSociales li a img {
         font-size: 90%;
     }
     footer {
-        top: 2300px;
+        top: 2400px;
     }
 }
 
 @media (max-width: 425px) {
-    body {
-        background-color: #0098ff;
-    }
-    header {
-        background-color: #b9ffff;
-    }
     header nav .navegador {
         left: 20%;
     }
     header nav .navegador li a {
         font-size: 90%;
-        color: #0098ff;
     }
     main .secUno .secImguno img {
         top: 30%;
         left: 15%;
-        width: 100px;
-        height: 100px;
+        width: 120px;
+        height: 120px;
     }
     main .secUno .secTit h1 {
-        left: 47%;
-        top: 35%;
+        left: 48%;
+        top: 38%;
         font-size: 200%;
         font-weight: 700;
     }
@@ -513,7 +511,7 @@ footer div .redesSociales li a img {
         top: 50px;
     }
     main #secCinco {
-        top: 2420px;
+        top: 2500px;
         height: 430px;
     }
     main #secCinco .clasUno h2 {
@@ -521,15 +519,14 @@ footer div .redesSociales li a img {
     }
     main #secCinco .clasDos {
         width: 98%;
-        left: 1%;
+        left: 0%;
         top: -10%;
         height: 450px;
     }
     main #secCinco .clasDos form .envNos {
-        top: 370px;
-        background: #b9ffff;
+        top: 385px;
     }
     footer {
-        top: 2880px;
+        top: 2960px;
     }
 }
